{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 139,
  "lineage": "e500c8b9-62a8-f40b-20a7-527734d2fcfc",
  "resources": [
    {
      "module": "module.modulecomputedemo",
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dfb827e5c8b3f761",
            "arn": "arn:aws:ec2:us-east-1:737795138174:elastic-ip/eipalloc-0dfb827e5c8b3f761",
            "association_id": "eipassoc-07cf672058ff2ed59",
            "domain": "vpc",
            "id": "eipalloc-0dfb827e5c8b3f761",
            "instance": "i-0bd573eb85d1ae99f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a6eb26e1c9a769bc",
            "private_dns": "ip-10-222-1-144.ec2.internal",
            "private_ip": "10.222.1.144",
            "public_dns": "ec2-54-80-190-144.compute-1.amazonaws.com",
            "public_ip": "54.80.190.144",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-ec2-elastic-IP"
            },
            "tags_all": {
              "Name": "dev-ec2-elastic-IP"
            },
            "vpc": true
          },
          "dependencies": [
            "module.modulecomputedemo.aws_instance.vm16",
            "module.modulecomputedemo.aws_internet_gateway.dev-igway",
            "module.modulecomputedemo.aws_security_group.db-sguser16"
          ]
        }
      ]
    },
    {
      "module": "module.modulecomputedemo",
      "mode": "managed",
      "type": "aws_instance",
      "name": "vm16",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:737795138174:instance/i-0bd573eb85d1ae99f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bd573eb85d1ae99f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a6eb26e1c9a769bc",
            "private_dns": "ip-10-222-1-144.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.222.1.144",
            "public_ip": "54.80.190.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09bc1bdbdb44e0835",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015db1381a20bd2f6",
            "tags": {
              "Name": "vmuser16"
            },
            "tags_all": {
              "Name": "vmuser16"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0727565933344dea6"
            ]
          },
          "dependencies": [
            "module.modulecomputedemo.aws_security_group.db-sguser16"
          ]
        }
      ]
    },
    {
      "module": "module.modulecomputedemo",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev-igway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737795138174:internet-gateway/igw-063314bead3c31e20",
            "id": "igw-063314bead3c31e20",
            "owner_id": "737795138174",
            "tags": {
              "Name": "dev-250-igateway"
            },
            "tags_all": {
              "Name": "dev-250-igateway"
            },
            "vpc_id": "vpc-094579365b61b900d"
          }
        }
      ]
    },
    {
      "module": "module.modulecomputedemo",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sguser16",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737795138174:security-group/sg-0727565933344dea6",
            "description": "Db server traffic allowed ssh \u0026 http",
            "egress": [],
            "id": "sg-0727565933344dea6",
            "ingress": [],
            "name": "db-web-ssh-sguser16",
            "name_prefix": "",
            "owner_id": "737795138174",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-094579365b61b900d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.modulenetworkdemo",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737795138174:subnet/subnet-015db1381a20bd2f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.222.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015db1381a20bd2f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "737795138174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subneweb - dev-001"
            },
            "tags_all": {
              "Name": "subneweb - dev-001"
            },
            "vpc_id": "vpc-094579365b61b900d"
          }
        }
      ]
    },
    {
      "module": "module.modulenetworkdemo",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737795138174:subnet/subnet-0a5e9333ca65e88de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.222.16.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5e9333ca65e88de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "737795138174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnetdb - dev-001"
            },
            "tags_all": {
              "Name": "subnetdb - dev-001"
            },
            "vpc_id": "vpc-094579365b61b900d"
          }
        }
      ]
    },
    {
      "module": "module.modulesecuritygroupdemo",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737795138174:security-group/sg-0046422c7565e9d44",
            "description": "Db server traffic allowed ssh \u0026 http",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0046422c7565e9d44",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "db-web-ssh-sg16",
            "name_prefix": "",
            "owner_id": "737795138174",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-094579365b61b900d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.modulesecuritygroupdemo",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "db-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737795138174:security-group-rule/sgr-037bd8a4ba9bc7d01",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-037bd8a4ba9bc7d01",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0046422c7565e9d44",
            "security_group_rule_id": "sgr-037bd8a4ba9bc7d01",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.modulesecuritygroupdemo.aws_security_group.db-sg"
          ]
        }
      ]
    },
    {
      "module": "module.modulesecuritygroupdemo",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "db-ingress-22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737795138174:security-group-rule/sgr-0570ac52db8d5ffbf",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0570ac52db8d5ffbf",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0046422c7565e9d44",
            "security_group_rule_id": "sgr-0570ac52db8d5ffbf",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.modulesecuritygroupdemo.aws_security_group.db-sg"
          ]
        }
      ]
    },
    {
      "module": "module.modulesecuritygroupdemo",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "db-ingress-80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737795138174:security-group-rule/sgr-03e112480dca69de0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-03e112480dca69de0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0046422c7565e9d44",
            "security_group_rule_id": "sgr-03e112480dca69de0",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.modulesecuritygroupdemo.aws_security_group.db-sg"
          ]
        }
      ]
    }
  ]
}